fix(fab): Add overflow: hidden; to ripple target to fix bounded ripple.

--- a/packages/mdc-fab/_mixins.scss
+++ b/packages/mdc-fab/_mixins.scss
@@ -96,6 +96,7 @@ $mdc-fab-ripple-target: ".mdc-fab__ripple";
 
     #{$mdc-fab-ripple-target} {
       @include mdc-ripple-target-common($query: $query);
+      overflow: hidden;
     }
   }
 
